Fix clippy warnings and add filterable file list example
- Remove unused Text import in speak-code-cli
- Add explicit lifetime annotation in filterable_file_list example
- Collapse nested if-let patterns in speak-code-server WebSocket handler
- Prefix unused variable with underscore
- Add examples workspace member with filterable file list TUI

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "speak-code-cli",
     "speak-code-server", 
     "speak-code-shared",
+    "examples",
 ]
 
 [workspace.dependencies]
